[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/icons/snake_head.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/Score.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/Time.png" type="Texture" id=3]
[ext_resource path="res://src/menu/stage_prelude_menu/ParametersFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/icons/less_than.png" type="Texture" id=5]
[ext_resource path="res://src/menu/stage_prelude_menu/ParametersInfo.gd" type="Script" id=6]
[ext_resource path="res://assets/icons/equals.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/greater_than_equals.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/Score_disabled.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/snake_head_disabled.png" type="Texture" id=10]
[ext_resource path="res://assets/icons/Time_disabled.png" type="Texture" id=11]

[sub_resource type="GDScript" id=1]
script/source = "class_name ParametersInfo extends Label

var _StageNumberFont = preload(\"res://src/menu/stage_prelude_menu/ParametersFont.tres\")
"

[node name="ParametersInfoControl" type="Control"]
anchor_right = 0.94
anchor_bottom = 0.2
script = ExtResource( 6 )

[node name="SnakeTextureButton" type="TextureButton" parent="."]
anchor_left = 0.07
anchor_top = 0.07
anchor_right = 0.172
anchor_bottom = 0.31
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="SnakeCriteriaTextureButton" type="TextureButton" parent="."]
anchor_left = 0.18
anchor_top = 0.07
anchor_right = 0.283
anchor_bottom = 0.31
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="SnakeLabel" type="Label" parent="."]
anchor_left = 0.3
anchor_top = 0.09
anchor_right = 1.0
anchor_bottom = 0.31
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1"
valign = 1

[node name="ScoreTextureButton" type="TextureButton" parent="."]
anchor_left = 0.07
anchor_top = 0.38
anchor_right = 0.172
anchor_bottom = 0.62
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.62
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "2"
valign = 1

[node name="ScoreCriteriaTextureButton" type="TextureButton" parent="."]
anchor_left = 0.18
anchor_top = 0.38
anchor_right = 0.283
anchor_bottom = 0.62
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="TimeTextureButton" type="TextureButton" parent="."]
anchor_left = 0.07
anchor_top = 0.69
anchor_right = 0.172
anchor_bottom = 0.93
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 0.3
anchor_top = 0.71
anchor_right = 1.0
anchor_bottom = 0.93
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "3"
valign = 1
script = SubResource( 1 )

[node name="TimeCriteriaTextureButton" type="TextureButton" parent="."]
anchor_left = 0.18
anchor_top = 0.69
anchor_right = 0.283
anchor_bottom = 0.93
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
